src/objects/CPQ_PricingPoolAccountMap__c.object
<CustomObject>
    <description>De-normalized table to capture Pricing Pool vs Account mapping</description>
    <fields>
        <fullName>CPQ_Account__c</fullName>
        <description>Reference to the account</description>
        <inlineHelpText>Reference to the account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pricing Pool Account Maps</relationshipLabel>
        <relationshipName>Pricing_Pool_Account_Maps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CPQ_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True indicates that the mapping of pool vs account is active and being used.</description>
        <inlineHelpText>True indicates that the mapping of pool vs account is active and being used.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this the default pricing pool for the account</description>
        <inlineHelpText>Indicates if this the default pricing pool for the account</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Pricing_Pool_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the pricing pool that the account maps to</description>
        <inlineHelpText>Reference to the pricing pool that the account maps to</inlineHelpText>
        <label>Pricing Pool ID</label>
        <referenceTo>CPQ_PricingPool__c</referenceTo>
        <relationshipLabel>Pricing Pool Account Maps</relationshipLabel>
        <relationshipName>Pricing_Pool_Account_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQ_Pricing_Pool_Name__c</fullName>
        <formula>CPQ_Pricing_Pool_ID__r.CPQ_Pricing_Pool_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Pool Name</label>
        <type>Text</type>
    </fields>
    <label>Pricing Pool Account Map</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CPQ_Pricing_Pool_ID__c</columns>
        <columns>CPQ_Account__c</columns>
        <columns>CPQ_Active__c</columns>
        <columns>CPQ_Pricing_Pool_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PPAM-{00000000}</displayFormat>
        <label>Pool Acct Map ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Pool Account Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>